@@ -31,3 +31,4 @@ dan@garthwaite.org -- reportspace bugfix
 Tuomas Jormola <tj@solitudo.net> -- "when = manual" option
 Ian Beckwith <ianb@erislabs.net> -- dup bandwidthlimit fix
 Olivier Berger <oberger@ouvaton.org> -- dup debug output bugfix, reportinfo option
+stefan <s.freudenberg@jpberlin.de> -- dup support for Amazon S3 buckets
